# PhD-preprocessing-code

./: README.md  pyrightconfig.json
adni2bids/: adni-kode.org_archive  adni-kode.qmd  subjects_t1_pet.tsv
adni_explore/: adni-kode.org  subjects_t1_pet.py  t1_participants.tsv
adni_explore/adni-kode-nettside/: index.html
anonymize_dicom/: anonymize_dicom.py
bids2parquet/: TODO.md  pyproject.toml
bids2parquet/src/bids2parquet/: main.py
bids2parquet/src/bids2parquet/adni_processing/: config.yaml  constants.py
bids2parquet/src/bids2parquet/adni_processing/data_processing/: processing.py
bids2parquet/src/bids2parquet/adni_processing/file_operations/: io.py
bids2parquet/tests/: test_adni_processing.py  test_bids2parquet.py
bids2tsv/: TODO.md  bids2tsv.py
bidsmap_corrector/: bidsmap_corrector.py  corr_bidsmap.yaml  example_input.yaml  example_output_corr.yaml  output_test.yaml
print_dicom_tags/: print_dicom_tags.py  tagfile_example.yml  validate_dicomdir.py
scripts/: dicomsort_santpau.txt  log_qstat.sh  monitor_dirsize.sh  qsub-test.sh  run_clinica_batch.sh  search_bids.sh  split_tsv.sh
shell-scripts/: delete_not_in_qcfile.sh
